Add globals and examples for importing stylesheet

--- a/app/(pages)/_globals/mixins.scss
+++ b/app/(pages)/_globals/mixins.scss
@@ -33,3 +33,10 @@
       @content;
     }
   }
+
+  @mixin fontStyle($size, $weight, $line-height, $family) {
+    font-size: $size;
+    font-weight: $weight;
+    line-height: $line-height;
+    font-family: $family;
+  }
