--- a/app/(pages)/_components/StoreListing/StoreListing.module.scss
+++ b/app/(pages)/_components/StoreListing/StoreListing.module.scss
@@ -1,165 +1,208 @@
-   .main {
-          // border: solid black 1px;
-          display: flex;
-          justify-content: center;
-   }
-   
-   .title{
-    //  border: solid black 1px;
-          margin-left: 50px;
 
-          color: #E4A135;
-          font-size: 64px;
-          font-family: 'Poppins', sans-serif;
-   }
-
-   .top {
-    display: flex;
-     height: 80px;
-     padding-right: 10px;
-    //  padding-left: 50px;
-   }
-
-   .listingrow1, .listingrow2{
-    //  border: black solid 1px;
-     display: flex;
-          margin-bottom: 20px;
-          
-          display: flex;
-          justify-content: center; 
-   }
-
-   .buttons {
-          // border: solid black 1px;
-        padding: 10px;
-        margin-left: auto;
-   }
-
-   .btn1{
-        margin: 8px;
-
-        border-radius: 50px;
-        border: 0px;
-        background-color: #CFBAE8;
-        font-size: 16px;
-
-        width: 100px;
-        height: 44px;
-
-   }
-   .btn2{
-        margin: 8px;
-
-        border-radius: 50px;
-        border: 0px;
-        background-color: #CFBAE8;
-        font-size: 16px;
-
-        width: 200px;
-        height: 44px;
-   }
-
-   .btn1:hover, .btn2:hover{
-    background: linear-gradient(200deg, #04164F 7.1%, #3D1069 62.03%, #750B83 94.99%);
-    color: white;
-   }
-
-   .cart{
-    //  border: solid black 1px;
-     margin-left: auto;
-     margin-bottom: 20px;
-     margin-right: 10px;
-
-     width: 70px;
-     height: 50px;
-   }
-
-   .btn4{
-          // margin: 8px;
-        border-radius: 50px;
-        border: 0px;
-        font-size: 16px;
-        background: linear-gradient(200deg, #04164F 7.1%, #3D1069 62.03%, #750B83 94.99%);
-        color: white;
-
-        width: 50px;
-        height: 50px;
-   }
-
-   .container {
-    border: solid #E4A135 2px;
-    transition: 0.3s;
-    border-radius: 10px;
-
-    width: 424px;
-    height: 424px;
-   }
-
-   .container:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+.main {
+  
+  // border: solid black 1px;
+  display: flex;
+  justify-content: center;
 }
 
-    .productinfo{
-      // border: black solid 1px;
-      color: black;
-      text-decoration: none;
-      margin-left: 20px;
-    }
+.title{
+  //  border: solid black 1px;
+  margin-left: 50px;
 
-    .productdetail{
-     // border: black solid 1px;
-     display: flex;
-     flex-direction: row;
+  color: #E4A135;
+  font-size: 64px;
+  font-family: 'Poppins', sans-serif;
+}
 
-     width: 424px;
-     height: 70px;
 
-    }
 
-    .productname{
-     // border: black solid 1px;
-     width: 300px;
-    }
 
-    .cost{
-     // border: black solid 1px;
-     padding-right: 20px;
-     margin-left: auto;
-     
-     color: #E4A135;
-     font-family: 'Poppins', sans-serif;
-     font-weight: bold;
-     
-     width: 60px;
-    }
 
-    .bottom{
-     // border: 1px black solid;
-     padding-top: 0px;
-    }
+.top {
+  display: flex;
+  height: 80px;
+  padding-right: 10px;
+  //  padding-left: 50px;
+}
 
-    .pagination {
-     display: flex;
-     justify-content: center;
-     list-style-type: none;
-   }
+.listbox{
+  //  border: black solid 1px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-bottom: 20px;
    
-   .pagination a {
-     padding-top: 20px;
-     margin: 0 5px;
-     
-     text-decoration: none;
-     color: #750B83;
-     border-radius: 5px;
-   }
-   
-   .pagination a:hover {
-     font-weight: bold;
-     font-size: 18px;
-   }
-   
-   .pagination .active {
-     color: white;
-     background-color: black;
-   }
-   
+}
+
+
+
+
+.buttons {
+  // border: solid black 1px;
+  padding: 10px;
+  margin-left: auto;
+}
+
+.btn1{
+  margin: 8px;
+
+  border-radius: 50px;
+  border: 0px;
+  background-color: #CFBAE8;
+  font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+
+  width: 100px;
+  height: 44px;
+
+}
+.btn2{
+  margin: 8px;
+
+  border-radius: 50px;
+  border: 0px;
+  background-color: #CFBAE8;
+  font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+
+  width: 200px;
+  height: 44px;
+}
+
+.activeBtn1{
+  margin: 8px;
+
+  border-radius: 50px;
+  border: 0px;
+  background: linear-gradient(200deg, #04164F 7.1%, #3D1069 62.03%, #750B83 94.99%);
+  color: white;
+  font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+
+  width: 100px;
+  height: 44px;
+}
+
+.activeBtn2{
+  margin: 8px;
+
+  border-radius: 50px;
+  border: 0px;
+  background: linear-gradient(200deg, #04164F 7.1%, #3D1069 62.03%, #750B83 94.99%);
+  color: white;
+  font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+
+  width: 200px;
+  height: 44px;
+}
+
+.cart{
+  //  border: solid black 1px;
+  margin-left: auto;
+  margin-bottom: 20px;
+  margin-right: 10px;
+
+  width: 70px;
+  height: 50px;
+}
+
+.btn4{
+  // margin: 8px;
+  border-radius: 50px;
+  border: 0px;
+  font-size: 16px;
+  background: linear-gradient(200deg, #04164F 7.1%, #3D1069 62.03%, #750B83 94.99%);
+  color: white;
+
+  width: 50px;
+  height: 50px;
+}
+
+
+
+
+.container {
+  border: solid #E4A135 2px;
+  transition: 0.3s;
+  border-radius: 10px;
+
+  width: 424px;
+  height: 424px;
+}
+
+.container:hover {
+  box-shadow: 0 8px 16px 0 rgba(167, 7, 225, 0.2);
+}
+
+.product{
+  // border: black solid 1px;
+
+  color: black;
+  text-decoration: none;
+  display: grid;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.productdetail{
+  // border: black solid 1px;
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+  margin-bottom: 14px;
+
+  width: 424px;
+  height: 70px;
+
+}
+
+.productname{
+  // border: black solid 1px;
+  width: 300px;
+}
+
+.cost{
+  // border: black solid 1px;
+  padding-right: 20px;
+  margin-left: auto;
+
+  color: #E4A135;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+
+  width: 60px;
+}
+
+
+
+
+.bottom{
+  // border: 1px black solid;
+  height: 80px;
+  
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+}
+
+.pagination button{
+  margin: 5px;
+  border: 0px;
+
+  background-color: transparent;
+  text-decoration: none;
+  color: #750B83;
+  border-radius: 5px;
+
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+}
+
+.activePage {
+  font-weight: bold;
+  font-family: 'Roboto', sans-serif;
+  font-size: 22px !important;
+}
