--- a/app/(pages)/(home)/page.module.scss
+++ b/app/(pages)/(home)/page.module.scss
@@ -62,4 +62,33 @@
       }
     }
   }
+
+  .blog {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 80px;
+    gap: 30px;
+
+    h1 {
+      width: fit-content;
+      color: var(--gold);
+    }
+  }
+
+  .upcomingEvents {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: solid black;
+    padding-top: 115px;
+    padding-bottom: 105px;
+    height: 1500px;
+
+    h1 {
+      width: fit-content;
+      color: var(--gold);
+    }
+  }
 }
