--- a/app/(pages)/conference/page.module.scss
+++ b/app/(pages)/conference/page.module.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .page
 {
@@ -18,19 +18,45 @@
 {
     display: flex;
     flex-direction: column;
+    gap: 22px;
     width: 50%;
+    height: 230px;
 
     h1 
     {
+        position: relative;
         height: 160px;
-        font-size: 64px;
         color: var(--gold);
+        font-weight: 700;
+        font-size: 64px;
+        line-height: 80px;
+        letter-spacing: 0px;
     }
     
-    h3
+    h2
     {
-        margin-top: 22px;
+        position: relative;
         height: 48px;
         color: var(--dark-purple);
+        font-weight: 700;
+        font-size: 32px;
+        line-height: 100%;
+        letter-spacing: 0px;
     }
+}
+
+.titleImageContainer
+{
+    position: relative;
+    width: 50%;
+    height: 230px;
+    flex-shrink: 0px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.titleImage
+{
+    object-fit: cover;
+    border-radius: 10px;
 }
