--- a/app/(pages)/conference/page.module.scss
+++ b/app/(pages)/conference/page.module.scss
@@ -2,7 +2,9 @@
 
 .page
 {
-    
+    display: flex;
+    flex-direction: column;
+    gap: 125px;
 }
 
 .upperPage
@@ -13,6 +15,15 @@
     margin-top: 233px;
     margin-left: 100px;
     margin-right: 100px;
+}
+
+.lowerPage
+{
+    display: flex;
+    gap: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 147px;
 }
 
 .titleBlock
@@ -32,7 +43,7 @@
     display: flex;
     flex-direction: column;
     gap: 22px;
-    width: 51%;
+    width: 53%;
     height: 230px;
 
     h1 
@@ -59,6 +70,47 @@
     }
 }
 
+.summaryRightBlock
+{
+    width: 66%;
+    height: 234px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.lowerLeftBlock
+{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    height: 512px;
+    width: 57%
+}
+
+.involvementBlock
+{
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+
+    h1 
+    {
+        font-size: 48px;
+        color: var(--gold);
+        height: 72px;
+        letter-spacing: 0px;
+    }
+
+    h2 
+    {
+        font-size: 32px;
+        color: var(--dark-purple);
+        letter-spacing: 0px;
+        height: 48px;
+    }
+}
+
 .titleImageContainer
 {
     position: relative;
@@ -69,7 +121,27 @@
     overflow: hidden;
 }
 
-.titleImage
+.summaryImageContainer
+{
+    position: relative;
+    width: 34%;
+    height: 254px;
+    flex-shrink: 0px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.involvementImageContainer
+{
+    position: relative;
+    width: 43%;
+    height: 512px;
+    flex-shrink: 0px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.conferenceImage
 {
     object-fit: cover;
     border-radius: 10px;
