--- a/app/(pages)/_components/Header/Header.module.scss
+++ b/app/(pages)/_components/Header/Header.module.scss
@@ -1,59 +1,91 @@
-.header{
-  display:flex;
-  gap:20px;
-  border-style:outset;
-  font-size:16px;
-  line-height: 150%;
-  font-weight: bold;
+.navbar{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background: var(--white);
 }
-/* Dropdown容器 */
-.dropdown {
-  position: relative;
+.navbar li {
+  float:right;
   display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+}
+.navbar li.dropdown{
+  display:inline-block;
+}
+.dropdown_contents{
+  display:none;
+  position:absolute;
+  background:var(--white);
+  width: 188px;
+  height:53px;
+}
+.dropdown_contents a{
+  color:var(--dark-purple);
+  display:block;
+  text-align:left;
+  padding: 20px 16px;
+}
+.navbar li a:hover{
+  cursor:pointer;
 }
 
-/* 触发下拉菜单的按钮 */
-.button {
-  padding: 10px 20px;          /* 按钮的内边距 */
-  font-size: 16px;             /* 字体大小 */
-  border: none;                /* 无边框 */
-  cursor: pointer;             /* 悬停时显示指针 */
-}
-.arrow {
-  margin-left: 10px;           /* 符号与按钮文字之间的间距 */
-  transition: transform 0.3s ease;  /* 平滑的转变效果 */
+.dropdown:hover  .dropdown_contents{
+  display:block;
 }
 
-/* 下拉菜单的内容（默认为隐藏） */
-.dropdown_contents {
-  display: none;               /* 默认隐藏下拉菜单 */
-  position: absolute;          /* 将下拉菜单定位在按钮下方 */
-  background-color: #f9f9f9;   /* 背景颜色 */
-  min-width: 160px;            /* 最小宽度 */
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);  /* 添加阴影效果 */
-  z-index: 1;                  /* 保证下拉菜单在其他元素之上 */
-  padding: 10px;
-}
+.dropdown-content a:hover {background: var(--light-purple);}
 
-/* 当鼠标悬停在按钮上时显示下拉菜单 */
-.dropdown:hover .dropdown_contents {
-  display: block;              /* 显示下拉菜单 */
-}
-.dropdown:hover .arrow {
-  transform: rotate(180deg);   /* 旋转箭头符号180度 */
-}
-
-/* 下拉菜单中的链接样式 */
-.dropdown_contents a {
-  color: black;                /* 黑色文字 */
-  padding: 8px 16px;            /* 内边距 */
-  text-decoration: none;        /* 移除下划线 */
-  display: block;               /* 块级显示，便于点击 */
-}
-
-/* 悬停时改变链接的背景颜色 */
-.dropdown_contents a:hover {
-  background-color: #CFBAE8;      /* 悬停时的背景色 */
-}
+///* Dropdown容器 */
+//.dropdown {
+//  position: relative;
+//  display: inline-block;
+//}
+//
+///* 触发下拉菜单的按钮 */
+//.button {
+//  padding: 10px 20px;          /* 按钮的内边距 */
+//  font-size: 16px;             /* 字体大小 */
+//  border: none;                /* 无边框 */
+//  cursor: pointer;             /* 悬停时显示指针 */
+//}
+//.arrow {
+//  margin-left: 10px;           /* 符号与按钮文字之间的间距 */
+//  transition: transform 0.3s ease;  /* 平滑的转变效果 */
+//}
+//
+///* 下拉菜单的内容（默认为隐藏） */
+//.dropdown_contents {
+//  display: none;               /* 默认隐藏下拉菜单 */
+//  position: absolute;          /* 将下拉菜单定位在按钮下方 */
+//  background-color: #f9f9f9;   /* 背景颜色 */
+//  min-width: 160px;            /* 最小宽度 */
+//  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);  /* 添加阴影效果 */
+//  z-index: 1;                  /* 保证下拉菜单在其他元素之上 */
+//  padding: 10px;
+//}
+//
+///* 当鼠标悬停在按钮上时显示下拉菜单 */
+//.dropdown:hover .dropdown_contents {
+//  display: block;              /* 显示下拉菜单 */
+//}
+//.dropdown:hover .arrow {
+//  transform: rotate(180deg);   /* 旋转箭头符号180度 */
+//}
+//
+///* 下拉菜单中的链接样式 */
+//.dropdown_contents a {
+//  color: black;                /* 黑色文字 */
+//  padding: 8px 16px;            /* 内边距 */
+//  text-decoration: none;        /* 移除下划线 */
+//  display: block;               /* 块级显示，便于点击 */
+//}
+//
+///* 悬停时改变链接的背景颜色 */
+//.dropdown_contents a:hover {
+//  background-color: #CFBAE8;      /* 悬停时的背景色 */
+//}
 
 
