--- a/app/(pages)/_components/Button/Button.module.scss
+++ b/app/(pages)/_components/Button/Button.module.scss
@@ -1,31 +1,32 @@
-.Button{
-  width:272px;
-  height:44px;
+.Button {
+  width: 272px;
+  height: 44px;
   border-radius: 9999px;
   text-align: center;
   font-size: 1rem;
-  border:none;
+  border: none;
   cursor: pointer;
 }
-.lightButton{
-  background:var(--light-purple);
-  color:var(--black);
-  transition:background 0.3s ease;
+
+.lightButton {
+  background: var(--light-purple);
+  color: var(--black);
+  transition: 0.3s ease;
 }
 
-.darkButton{
+.darkButton {
   background: var(--dark-purple);
-  color:var(--white);
+  color: var(--white);
   font-weight: bold;
 }
-.gradientButton{
+.gradientButton {
   background: var(--Aggie-Space);
-  color:var(--white);
+  color: var(--white);
   font-weight: bold;
 }
 
-.lightButton:hover{
-  background:var(--dark-purple);
-  color:white;
+.lightButton:hover {
+  background: var(--dark-purple);
+  color: var(--white);
   font-weight: bold;
 }
